--- a/src/css/base.less
+++ b/src/css/base.less
@@ -1,5 +1,5 @@
 // 基础样式
-@color-main: #00b38a; // 主色
+@color-main: #0f8bff; // 主色
 @font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Microsoft YaHei,
   Arial Regular; // 普通字体
 @font-family-title: 'Lucida Grande', 'Hiragino Sans GB', 'Hiragino Sans GB W3',
