--- a/src/css/base.less
+++ b/src/css/base.less
@@ -1,56 +1,48 @@
 // 基础样式
-@color-main: #0f8bff; // 主色
-@font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Microsoft YaHei,
-  Arial Regular; // 普通字体
+@color-main: #1990ff; // 主色
+@font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Microsoft YaHei',
+  '微软雅黑', Arial, sans-serif; // 普通字体
 @font-family-title: 'Lucida Grande', 'Hiragino Sans GB', 'Hiragino Sans GB W3',
   @font-family; // 标题字体
 
-.kill-ie,
-.top-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 100;
+.kill-ie {
   margin: 0;
-  color: #555;
-  font-size: 12px;
-  line-height: 22px;
-  font-weight: bold;
+  padding: 0.5em 0;
+  color: #333;
   text-align: center;
   background: #fff8e2;
-}
-.kill-ie {
-  z-index: 1000;
 }
 
 * {
   box-sizing: border-box;
 }
 body {
+  min-width: 420px;
   position: relative;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
   font-family: @font-family;
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 22 / 15;
   color: #333;
   background-color: #eee;
+  padding-top: 5px;
   overflow: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+  @media screen and (max-width: 1024px) {
+    padding-top: 0;
+  }
 }
 a {
   text-decoration: none;
   transition: all 0.2s ease-in-out;
 }
-.status-bar {
+.last-modified {
   position: absolute;
-  top: 32px;
+  top: 30px;
   left: 50%;
   width: 1000px;
   transform: translateX(-50%);
+  text-align: right;
   font-size: 12px;
   color: #bbb;
   transition: all 0.2s ease-in-out;
@@ -58,50 +50,27 @@ a {
   @media screen and (max-width: 1024px) {
     width: auto;
     top: auto;
-    bottom: 38px;
+    bottom: 10px;
+    text-align: left;
     color: #d1d1d1;
-    text-align: center;
-  }
-  .status {
-    display: inline-flex;
-    align-items: center;
-    float: left;
-    cursor: pointer;
-    @media screen and (max-width: 1024px) {
-      float: unset;
-      text-align: center;
-    }
-    .icon {
-      margin-right: 4px;
-    }
-  }
-  .last-modified {
-    float: right;
-    @media screen and (max-width: 1024px) {
-      float: unset;
-      text-align: center;
-    }
   }
 }
 .content {
   position: relative;
   width: 1024px;
-  margin: 64px auto 32px;
+  margin: 50px auto 30px;
   background-color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 16px #c0c0c0;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+  box-shadow: 0 0 15px #c0c0c0;
   overflow: hidden;
   transition: all 0.2s ease-in-out;
   opacity: 0;
-  transform: translate3d(0, 48px, 0);
+  transform: translate3d(0, 50px, 0);
   animation: fadeUp 2s cubic-bezier(0.19, 1, 0.22, 1) forwards;
   @keyframes fadeUp {
     from {
       opacity: 0;
-      transform: translate3d(0, 48px, 0);
+      transform: translate3d(0, 50px, 0);
     }
     to {
       opacity: 1;
@@ -110,22 +79,23 @@ a {
   }
   @media screen and (max-width: 1024px) {
     width: 100%;
-    margin-top: 0;
+    margin: 0;
     border-radius: 0;
   }
 }
 .content-hd {
-  padding: 32px 48px 24px;
+  padding: 42px 48px 32px;
   color: #fff;
   background-color: @color-main;
   overflow: hidden;
   @media screen and (max-width: 720px) {
-    padding: 24px;
+    padding: 25px;
   }
   .title {
-    margin-bottom: 8px;
+    padding-bottom: 24px;
+    margin-bottom: 16px;
     border-bottom: 2px solid darken(@color-main, 2%);
-    font-size: 46px;
+    font-size: 52px;
     overflow: hidden;
   }
   .name,
@@ -148,49 +118,41 @@ a {
     text-align: right;
   }
   .name {
-    height: 80px;
-    @media screen and (max-width: 720px) {
-      height: auto;
-    }
     h1 {
       font-family: @font-family-title;
       font-weight: 500;
-      letter-spacing: 4px;
-      height: 100%;
+      letter-spacing: 5px;
       @media screen and (max-width: 720px) {
-        margin-top: 16px;
-        letter-spacing: 8px;
+        margin-top: 10px;
+        letter-spacing: 0;
         line-height: 1.25;
       }
       small {
-        padding-left: 8px;
+        padding-left: 10px;
         font-size: 24px;
         font-weight: 400;
         letter-spacing: 0;
         @media screen and (max-width: 720px) {
           display: block;
           padding-left: 0;
-          padding-right: 8px;
           font-size: 20px;
-          line-height: 28px;
-          letter-spacing: 1px;
+          line-height: 1;
         }
       }
     }
   }
   .job {
-    height: 80px;
     font-weight: 300;
     -webkit-font-smoothing: subpixel-antialiased;
     @media screen and (max-width: 720px) {
       text-align: center;
     }
     h2 {
-      display: inline;
+      display: inline-block;
       font-size: 24px;
       @media screen and (max-width: 720px) {
-        margin: 8px auto 0;
-        padding: 16px 4px;
+        margin: 5px auto 0;
+        padding: 10px;
         border-top: 1px solid darken(@color-main, 2%);
       }
       small {
@@ -199,35 +161,33 @@ a {
     }
   }
   .info {
-    padding: 4px;
+    padding-left: 5px;
+    line-height: 30px;
     h2 {
-      margin: 2px 0;
-      font-size: 17px;
-      line-height: 32px;
+      margin: 8px 0 4px;
+      font-size: 18px;
     }
     h3 {
-      font-size: 15px;
-      line-height: 30px;
+      font-size: 16px;
     }
   }
   .contact {
-    padding: 4px;
+    padding-right: 5px;
     ul {
+      margin-top: 8px;
       @media screen and (max-width: 720px) {
         margin: 16px 0 0;
         text-align: center;
       }
       > li {
-        height: 24px;
+        height: 23px;
         @media screen and (max-width: 720px) {
-          display: inline-flex;
+          display: inline-block;
         }
         > a {
-          display: inline-flex;
-          align-items: center;
           font-family: @font-family-title;
           font-size: 14px;
-          line-height: 24px;
+          line-height: 23px;
           color: #fff;
           &:hover {
             color: #e8e8e8;
@@ -237,7 +197,7 @@ a {
               display: none;
             }
           }
-          .icon {
+          .iconfont {
             margin-left: 6px;
             vertical-align: middle;
             @media screen and (max-width: 720px) {
@@ -251,10 +211,10 @@ a {
 }
 .content-bd {
   min-height: 200px;
-  padding: 16px 32px 32px;
+  padding: 32px 30px 50px;
   overflow: hidden;
   @media screen and (max-width: 720px) {
-    padding: 16px 8px 32px;
+    padding: 15px 10px 50px;
   }
   .content-left,
   .content-right {
@@ -270,186 +230,180 @@ a {
     float: right;
   }
   section {
-    margin: 16px 16px 24px;
+    padding: 10px 18px;
     overflow: hidden;
   }
   .section-hd {
     position: relative;
-    margin: 4px auto 10px;
+    height: 32px;
+    margin: 10px auto 8px;
     overflow: hidden;
-    display: flex;
-    align-items: center;
   }
   .section-bd {
     overflow: hidden;
+    + .section-bd {
+      margin-top: 2px;
+    }
   }
   .section-title-l,
   .section-title-r {
-    flex: 1;
-    display: inline-flex;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    width: 35%;
     height: 0;
-    border-top: 1px solid #f1f1f1;
+    border-top: 1px solid #ededed;
     vertical-align: middle;
   }
+  .section-title-l {
+    left: 0;
+  }
+  .section-title-r {
+    right: 0;
+  }
   .section-title {
-    flex-shrink: 0;
     position: relative;
     z-index: 1;
+    width: 24%;
+    min-width: 100px;
     margin: 0 auto;
-    padding: 0 32px;
-    margin: 0 16px;
+    padding: 4px 10px;
     border-radius: 32px;
     font-size: 16px;
-    line-height: 32px;
     text-align: center;
-    color: #474747;
-    background-color: #f1f1f1;
+    background-color: #eee;
   }
   ul.section-list {
-    padding: 8px 0;
+    padding: 8px 0 4px;
     > li:last-child {
       .section-content {
         margin-bottom: 0;
       }
     }
   }
-  .item {
-    &.item-main {
+  .item-main {
+    .item-hd {
+      padding-top: 10px;
+    }
+    .item-bd {
+      margin-bottom: 4px;
+    }
+    ~ .item {
+      padding-left: 1px;
       .item-hd {
-        padding: 8px 0;
-        font-size: 16px;
+        padding-top: 6px;
       }
       .item-bd {
         margin-bottom: 4px;
       }
-      .btn {
-        font-size: 13px;
-      }
-      + .item .item-hd {
-        padding-top: 6px;
-      }
-    }
-    &.item-stage {
-      .item-hd {
-        padding: 4px 0 2px;
-        color: #555;
-        .item-time,
-        .item-more {
-          font-size: 14px;
+      &:last-child {
+        .item-bd {
+          margin-bottom: 10px;
         }
       }
     }
-    &:not(.item-stage) {
-      .item-bd {
-        margin-bottom: 4px;
+  }
+  .item-stage {
+    color: #666;
+    font-size: 13px;
+    .item-hd {
+      padding: 0 0 2px;
+      .item-time {
+        width: auto;
+        font-size: 13px;
+        float: right;
       }
-    }
-    &:not(.item-main) + .item-stage {
-      padding-top: 8px;
-    }
-    + .item-main {
-      padding-top: 8px;
     }
   }
   .item-hd {
     position: relative;
-    padding: 10px 0 8px;
+    padding: 8px 0 5px;
     font-weight: 500;
-    font-size: 15px;
-    line-height: 24px;
+    line-height: 22px;
     overflow: hidden;
-    color: #222;
-    .icon {
-      vertical-align: -3px;
+    .iconfont {
       color: @color-main;
-      margin-right: 2px;
     }
     .item-time {
       float: left;
-      display: inline-flex;
-      font-size: 15px;
-      width: 150px;
+      display: inline-block;
+      font-size: 14px;
+      width: 135px;
       @media screen and (max-width: 720px) {
         width: 100%;
-        margin-bottom: 4px;
+        margin-bottom: 5px;
       }
     }
     .item-more {
       float: right;
-      margin-left: 8px;
-      &:not(.btn) {
-        height: 24px;
-        line-height: 24px;
-      }
-      strong {
-        font-size: 14px;
-        margin-left: 4px;
-        margin-right: 0;
-      }
+      height: 22px;
+      line-height: 22px;
+      margin-left: 5px;
       @media screen and (max-width: 720px) {
         &.btn {
           position: absolute;
           right: 0;
           top: 10px;
+          margin-top: 1px;
         }
       }
     }
     .item-name {
       float: left;
-      display: inline;
+      display: inline-block;
     }
+  }
+  .item-bd {
+    margin-bottom: 6px;
   }
   .section-content {
-    line-height: 28px;
+    line-height: 25px;
     text-align: justify;
     word-break: break-all;
-    margin-bottom: 3px;
-    .icon-dot {
-      vertical-align: -3px;
+    margin-bottom: 2px;
+    .iconfont {
       color: @color-main;
-      margin-right: 2px;
     }
-    &.sub-content {
-      margin-top: -1px;
-      padding-left: 4px;
-      .icon-dot {
-        width: 12px;
-        height: 12px;
-        color: #999;
-        margin-right: -3px;
-      }
+    em {
+      display: inline-block;
+      font-family: Monaco, Menlo, @font-family;
+      font-size: 13px;
+      line-height: 15px;
+      border: 1px solid #e6e6e6;
+      border-radius: 3px;
+      color: #383838;
+      margin: 0 3px;
+      padding: 0 4px;
+      background-color: #f6f6f6;
+    }
+    strong {
+      font-family: @font-family;
+      font-size: 13px;
+      line-height: 15px;
+      font-weight: 500;
+      color: #494949;
+      margin: 0 3px;
+      padding: 0 4px;
+      border-bottom: 1px solid #eee;
+      box-shadow: inset 0 -8px #eee;
     }
   }
-  em {
-    font-size: 14px;
-    line-height: 16px;
-    border: 1px solid #e7e7e7;
-    border-radius: 3px;
-    color: #333;
-    margin: 0 4px;
-    padding: 1px 4px;
-    background-color: #f7f7f7;
-  }
-  strong {
-    font-size: 14px;
-    line-height: 16px;
-    font-weight: 500;
-    color: #474747;
-    margin: 0 4px;
-    padding: 0 4px;
-    border-bottom: 1px solid #eaeaea;
-    box-shadow: inset 0 -8px #eaeaea;
+}
+.iconfont {
+  vertical-align: middle;
+  &.icon-dot {
+    vertical-align: -1px;
   }
 }
 .btn {
-  display: inline-flex;
-  padding: 0 4px;
+  display: inline-block;
+  padding: 0 5px;
   border: 1px solid @color-main;
   border-radius: 3px;
   font-family: Menlo, @font-family;
-  height: 20px;
-  font-size: 12px;
-  line-height: 18px;
+  height: 20px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
   margin: 2px 0;
   text-align: center;
   color: @color-main;
@@ -459,8 +413,7 @@ a {
   }
 }
 .pdf {
-  display: inline-flex;
-  align-items: center;
+  display: inline-block;
   position: fixed;
   z-index: 10;
   bottom: 6px;
@@ -468,8 +421,8 @@ a {
   margin-left: 520px;
   padding: 0 8px;
   border-radius: 3px;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 26px;
   color: #fff;
   background-color: @color-main;
   transition: all 0.2s ease-in-out;
@@ -479,45 +432,29 @@ a {
     right: 8px;
     margin-left: 0;
   }
-  .icon {
-    margin-right: 4px;
-  }
 }
 footer {
   text-align: center;
   transition: all 0.2s ease-in-out;
   animation: fade 1.6s;
   &.github-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    @media screen and (max-width: 1024px) {
-      margin-bottom: 48px;
-    }
+    display: block;
   }
   &.print-footer {
     display: none;
   }
-  &.license-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 0;
-    margin-bottom: 16px;
-    font-size: 12px;
-  }
   .footer-link {
-    display: inline;
+    display: inline-block;
+    margin-top: 10px;
+    margin-bottom: 30px;
     color: #d1d1d1;
-    .icon {
-      width: 13px;
-      height: 13px;
-      margin-right: 3px;
-      vertical-align: -3px;
+    .iconfont {
+      vertical-align: middle;
+      margin-right: 2px;
+    }
+    @media screen and (max-width: 1024px) {
+      margin-top: 40px;
+      margin-bottom: 50px;
     }
   }
 }
