--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,5 +1,5 @@
 @import './reset.css';
-@import './icons.less';
+@import './iconfont.css';
 @import './base.less';
 @import './print.less';
 @import './style.less';
