--- a/src/css/print.less
+++ b/src/css/print.less
@@ -14,6 +14,7 @@
   }
   // 内容
   body {
+    padding: 0;
     background-color: unset;
   }
   .kill-ie,
@@ -26,8 +27,8 @@
     box-shadow: none;
     padding-bottom: 32px;
     .content-hd {
-      padding-top: 40px;
-      padding-bottom: 32px;
+      padding-top: 48px;
+      padding-bottom: 40px;
       .job {
         font-weight: 400;
         -webkit-font-smoothing: unset;
