--- a/src/css/print.less
+++ b/src/css/print.less
@@ -25,7 +25,7 @@
     margin: 0 auto;
     border-radius: 0;
     box-shadow: none;
-    padding-bottom: 32px;
+    // padding-bottom: 32px;
     .content-hd {
       padding-top: 48px;
       padding-bottom: 40px;
@@ -35,6 +35,12 @@
         opacity: 0.96;
       }
     }
+    // 单栏开关
+    // .content-left,
+    // .content-right {
+    //   width: 100%;
+    //   float: none;
+    // }
     .content-bd section {
       margin-bottom: 20px;
       .section-hd {
@@ -61,7 +67,7 @@
     position: absolute;
     z-index: 1;
     width: 1024px;
-    bottom: 24px;
+    bottom: 18px;
     left: 50%;
     transform: translateX(-50%);
     font-size: 13px;
