--- a/src/css/print.less
+++ b/src/css/print.less
@@ -28,7 +28,7 @@
     // padding-bottom: 32px;
     .content-hd {
       padding-top: 48px;
-      padding-bottom: 40px;
+      padding-bottom: 46px;
       .job {
         font-weight: 400;
         -webkit-font-smoothing: unset;
@@ -42,7 +42,7 @@
     //   float: none;
     // }
     .content-bd section {
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
       .section-hd {
         margin-bottom: 8px;
       }
