--- a/src/css/base.less
+++ b/src/css/base.less
@@ -84,7 +84,7 @@ a {
   }
 }
 .content-hd {
-  padding: 42px 48px 38px;
+  padding: 36px 48px 22px;
   color: #fff;
   background-color: @color-main;
   overflow: hidden;
@@ -92,8 +92,8 @@ a {
     padding: 25px;
   }
   .title {
-    padding-bottom: 24px;
-    margin-bottom: 16px;
+    padding-bottom: 16px;
+    margin-bottom: 8px;
     border-bottom: 2px solid darken(@color-main, 2%);
     font-size: 52px;
     overflow: hidden;
@@ -211,32 +211,32 @@ a {
 }
 .content-bd {
   min-height: 200px;
-  padding: 36px 30px 38px;
+  padding: 12px 30px 18px;
   overflow: hidden;
   @media screen and (max-width: 720px) {
     padding: 15px 4px 50px;
   }
-  .content-left,
-  .content-right {
-    width: 50%;
-    @media screen and (max-width: 1024px) {
-      width: 100%;
-    }
-  }
-  .content-left {
-    float: left;
-  }
-  .content-right {
-    float: right;
-  }
+  // .content-left,
+  // .content-right {
+  //   width: 50%;
+  //   @media screen and (max-width: 1024px) {
+  //     width: 100%;
+  //   }
+  // }
+  // .content-left {
+  //   float: left;
+  // }
+  // .content-right {
+  //   float: right;
+  // }
   section {
-    padding: 10px 18px;
+    padding: 4px 18px;
     overflow: hidden;
   }
   .section-hd {
     position: relative;
     height: 32px;
-    margin: 10px auto 8px;
+    margin: 8px auto 8px;
     overflow: hidden;
   }
   .section-bd {
